--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,8 @@
     "MailServer": "smtp.gmail.com",
     "MailPort": 587,
     "SenderName": "Kefas Ogabi",
-    "Sender": "kefasogabi@gmail.com",
-    "Password": "<?john11:35?>"
+    "Sender": "",
+    "Password": ""
 },
   "Logging": {
     "LogLevel": {
