--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   "EmailSettings": {
     "MailServer": "smtp.gmail.com",
     "MailPort": 587,
-    "SenderName": "Kefas Ogabi",
+    "SenderName": "",
     "Sender": "",
     "Password": ""
 },
