--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -39,8 +39,8 @@
     "ng2-opd-popup": "^1.1.21",
     "ngx-spinner": "^2.0.1",
     "ngx-toastr": "^8.10.0",
-    "raven-js": "^3.27.0",
-    "rxjs": "^6.2.2",
+    "raven-js": "^3.27.2",
+    "rxjs": "^5.5.12",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
@@ -50,7 +50,7 @@
     "@types/datatables.net": "^1.10.13",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/jquery": "^3.3.5",
+    "@types/jquery": "^3.3.35",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
@@ -63,9 +63,9 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "^3.8.3"
   },
   "optionalDependencies": {
-    "node-sass": "^4.9.0"
+    "node-sass": "^4.14.1"
   }
 }
