--- a/appsettings.json
+++ b/appsettings.json
@@ -1,17 +1,16 @@
 {
-  
 
-  "ConnectionStrings":{
-    "Default": "server=KEFAS-PC; database=Exam; Integrated Security=SSPI"
+
+  "ConnectionStrings": {
+    "Default": "Data Source=SQL5063.site4now.net;Initial Catalog=DB_A65BA0_exam;User Id=DB_A65BA0_exam_admin;Password=yohanna9five"
   },
-  "EmailSettings": {
-    "MailServer": "smtp.gmail.com",
-    "MailPort": 587,
-    "SenderName": "",
-    "SenderName": "",
-    "Sender": "",
-    "Password": ""
-},
+  "MailSettings": {
+    "Mail": "kefasogabi@gmail.com",
+    "DisplayName": "Kefas Ogabi",
+    "Password": "",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
